--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenRouter.ai Configuration
+OPENROUTER_API_KEY=openrouter_api_key_here
 
 # Discord Configuration
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
