--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ OPENROUTER_API_KEY=openrouter_api_key_here
 # Discord Configuration
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
 DISCORD_USER_ID=your_discord_user_id_here
+DISCORD_OAUTH_CLIENT_ID=your_discord_oauth_client_id_here
+DISCORD_OAUTH_CLIENT_SECRET=your_discord_oauth_client_secret_here
+DISCORD_OAUTH_REDIRECT_URL=http://your-domain/auth/discord/callback
 
 # Database Configuration (if using a different database)
 DB_HOST=localhost
