--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "node-cron": "^3.0.3",
     "openai": "^4.77.4",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "postgres": "^3.4.5",
     "socket.io": "^4.8.1"
   }
